tests/lexer/invalid/07_missing_quote.src
// Отсутствующие кавычки
"hello
world"
"test